// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UploadPhoto renders default state and disables submit 1`] = `
<div>
  <div
    class="sc-jEACwF"
  >
    <div
      class=""
    />
    <form>
      <div
        class="sc-cPiKLY hcPHMN"
      >
        <div
          class="sc-dLMFT cVfHkb"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          Загрузить фото
        </div>
      </div>
      <div
        class="sc-ikkxIz jlxLpA"
      >
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class=""
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class=""
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class=""
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <button
        class=""
        disabled=""
        style="--btn-bg: var(--text-muted);"
        type="submit"
      >
        Загрузить фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto shows error message when upload fails 1`] = `
<div>
  <div
    class="sc-jEACwF"
  >
    <div
      class=""
    >
      Network error
    </div>
    <form>
      <div
        class="sc-cPiKLY hcPHMN"
      >
        <div
          class="sc-dLMFT cVfHkb"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-ikkxIz jlxLpA"
      >
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class=""
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class=""
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class=""
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-gFqAkO fdwPkA"
      >
        <div
          class="sc-dhKdcy fJkiwv"
        >
          <div
            class="sc-kpDqfp gVbqiU"
          >
            <div
              style="width: 100%; height: 100%; background: var(--input-disabled-color);"
            />
          </div>
          <div
            class="sc-dAlyuI cHVeBq"
          >
            <div
              class="sc-jlZhev dBSRof"
            >
              <span>
                photo.jpg
              </span>
              <span
                class="sc-kAycey jEIthQ"
              >
                <span>
                  .
                </span>
                <span>
                  .
                </span>
                <span>
                  .
                </span>
              </span>
            </div>
            <span
              class="sc-iGgWBk iCNLQS"
            >
              image/jpeg
               · 
              4 B
               · Canon M50
               · 01.01.2020, 03:00:00
               · 1.000000, 2.000000 · 3m
            </span>
          </div>
          <button
            aria-label="Удалить файл photo.jpg"
            class="sc-cwHptO indzLL"
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <button
        class=""
        style="--btn-bg: var(--accent); --btn-hover-bg: var(--accent-hover);"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto updates label and shows selected file 1`] = `
<div>
  <div
    class="sc-jEACwF"
  >
    <div
      class=""
    />
    <form>
      <div
        class="sc-cPiKLY hcPHMN"
      >
        <div
          class="sc-dLMFT cVfHkb"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-ikkxIz jlxLpA"
      >
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class=""
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class=""
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-dAbbOM juffzi"
      >
        <div>
          <label
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class=""
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </div>
        <div
          class="undefined undefined"
        />
      </div>
      <div
        class="sc-gFqAkO fdwPkA"
      >
        <div
          class="sc-dhKdcy fJkiwv"
        >
          <div
            class="sc-kpDqfp gVbqiU"
          >
            <div
              style="width: 100%; height: 100%; background: var(--input-disabled-color);"
            />
          </div>
          <div
            class="sc-dAlyuI cHVeBq"
          >
            <div
              class="sc-jlZhev dBSRof"
            >
              <span>
                photo.jpg
              </span>
            </div>
            <span
              class="sc-iGgWBk iCNLQS"
            >
              image/jpeg
               · 
              4 B
               · Canon M50
               · 01.01.2020, 03:00:00
               · 1.000000, 2.000000 · 3m
            </span>
          </div>
          <button
            aria-label="Удалить файл photo.jpg"
            class="sc-cwHptO indzLL"
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <button
        class=""
        style="--btn-bg: var(--accent); --btn-hover-bg: var(--accent-hover);"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;
